fixed text being cut off blog popular

--- a/wp-content/themes/sixgill/custom_build.css
+++ b/wp-content/themes/sixgill/custom_build.css
@@ -12591,7 +12591,7 @@ footer div.mc4wp-error p {
 }
 .blog-page-popular-post-title {
   font-family: "Lato";
-  line-height: 1em;
+  line-height: 1.2;
   letter-spacing: 1px;
   color: #2e2e2e;
 }
